# shoumei

./: Cargo.toml  README.md  TODO.md
input/: test.shoumei
src/: cli.yaml  diagnostic.rs  lib.rs  main.rs  module.rs  resource.rs
src/interpreter/: brackets.rs  indent.rs  index.rs  index_resolve.rs  lexer.rs  mod.rs  parser.rs  symbols.rs  type_check.rs  type_deduce.rs  type_resolve.rs  types.rs
src/parser/: index.rs  index_resolve.rs  lexer.rs  mod.rs  syntax_tree.rs  type_check.rs  type_deduce.rs  type_resolve.rs  types.rs
src/runtime/: executor.rs  mod.rs  value.rs
